fixed maps on mobile

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -11,7 +11,7 @@
 }
 @media screen and (min-width: 900px) {
   #map {
-    height: 50vh;
+    height: 30vh;
   }
   .container {
     width: 100%;
