--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,8 +8,8 @@
 }
 
 #map {
-  height: 70vh;
-  padding: 185px 0;
+  height: 20vh;
+  padding: 385px 0 0 0;
   margin: auto;
 }
 
